Defined record and returned the configuration