@@ -19,12 +19,17 @@ import org.jembi.jempi.shared.models.dashboard.NotificationStats;
 import org.jembi.jempi.shared.models.dashboard.SQLDashboardData;
 import org.jembi.jempi.shared.utils.AppUtils;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+import org.jembi.jempi.shared.models.ConfigurationModel.Configuration;
+
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.sql.SQLException;
 import java.sql.Timestamp;
@@ -96,17 +101,17 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
          final String kafkaBootstrapServers,
          final String kafkaClientId) {
       return Behaviors.setup(context -> new BackEnd(level,
-                                                    context,
-                                                    dgraphHosts,
-                                                    dgraphPorts,
-                                                    sqlIP,
-                                                    sqlPort,
-                                                    sqlUser,
-                                                    sqlPassword,
-                                                    sqlNotificationsDb,
-                                                    sqlAuditDb,
-                                                    kafkaBootstrapServers,
-                                                    kafkaClientId));
+            context,
+            dgraphHosts,
+            dgraphPorts,
+            sqlIP,
+            sqlPort,
+            sqlUser,
+            sqlPassword,
+            sqlNotificationsDb,
+            sqlAuditDb,
+            kafkaBootstrapServers,
+            kafkaClientId));
    }
 
    private static void appendUploadConfigToFile(
@@ -145,32 +150,32 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
    public Receive<Event> actor() {
       ReceiveBuilder<Event> builder = newReceiveBuilder();
       return builder.onMessage(CountGoldenRecordsRequest.class, this::countGoldenRecordsHandler)
-                    .onMessage(CountInteractionsRequest.class, this::countInteractionsHandler)
-                    .onMessage(CountRecordsRequest.class, this::countRecordsHandler)
-                    .onMessage(FindExpandedSourceIdRequest.class, this::findExpandedSourceIdHandler)
-                    .onMessage(GetGidsAllRequest.class, this::getGidsAllHandler)
-                    .onMessage(GetGidsPagedRequest.class, this::getGidsPagedHandler)
-                    .onMessage(GetInteractionRequest.class, this::getInteractionHandler)
-                    .onMessage(GetExpandedInteractionsRequest.class, this::getExpandedInteractionsHandler)
-                    .onMessage(GetExpandedGoldenRecordRequest.class, this::getExpandedGoldenRecordHandler)
-                    .onMessage(GetExpandedGoldenRecordsRequest.class, this::getExpandedGoldenRecordsHandler)
-                    .onMessage(GetGoldenRecordAuditTrailRequest.class, this::getGoldenRecordAuditTrailHandler)
-                    .onMessage(GetInteractionAuditTrailRequest.class, this::getInteractionAuditTrailHandler)
-                    .onMessage(GetNotificationsRequest.class, this::getNotificationsHandler)
-                    .onMessage(UpdateGoldenRecordRequest.class, this::updateGoldenRecordHandler)
-                    .onMessage(PostIidGidLinkRequest.class, this::postIidGidLinkHandler)
-                    .onMessage(PostIidNewGidLinkRequest.class, this::postIidNewGidLinkHandler)
-                    .onMessage(PostUpdateNotificationRequest.class, this::postUpdateNotificationHandler)
-                    .onMessage(PostSimpleSearchGoldenRecordsRequest.class, this::postSimpleSearchGoldenRecordsHandler)
-                    .onMessage(PostCustomSearchGoldenRecordsRequest.class, this::postCustomSearchGoldenRecordsHandler)
-                    .onMessage(PostSimpleSearchInteractionsRequest.class, this::postSimpleSearchInteractionsHandler)
-                    .onMessage(PostCustomSearchInteractionsRequest.class, this::postCustomSearchInteractionsHandler)
-                    .onMessage(PostFilterGidsRequest.class, this::postFilterGidsHandler)
-                    .onMessage(PostFilterGidsWithInteractionCountRequest.class, this::postFilterGidsWithInteractionCountHandler)
-                    .onMessage(PostUploadCsvFileRequest.class, this::postUploadCsvFileHandler)
-                    .onMessage(SQLDashboardDataRequest.class, this::getSqlDashboardDataHandler)
-                    .onMessage(GetConfigurationRequest.class, this::getConfigurationHandler)
-                    .build();
+            .onMessage(CountInteractionsRequest.class, this::countInteractionsHandler)
+            .onMessage(CountRecordsRequest.class, this::countRecordsHandler)
+            .onMessage(FindExpandedSourceIdRequest.class, this::findExpandedSourceIdHandler)
+            .onMessage(GetGidsAllRequest.class, this::getGidsAllHandler)
+            .onMessage(GetGidsPagedRequest.class, this::getGidsPagedHandler)
+            .onMessage(GetInteractionRequest.class, this::getInteractionHandler)
+            .onMessage(GetExpandedInteractionsRequest.class, this::getExpandedInteractionsHandler)
+            .onMessage(GetExpandedGoldenRecordRequest.class, this::getExpandedGoldenRecordHandler)
+            .onMessage(GetExpandedGoldenRecordsRequest.class, this::getExpandedGoldenRecordsHandler)
+            .onMessage(GetGoldenRecordAuditTrailRequest.class, this::getGoldenRecordAuditTrailHandler)
+            .onMessage(GetInteractionAuditTrailRequest.class, this::getInteractionAuditTrailHandler)
+            .onMessage(GetNotificationsRequest.class, this::getNotificationsHandler)
+            .onMessage(UpdateGoldenRecordRequest.class, this::updateGoldenRecordHandler)
+            .onMessage(PostIidGidLinkRequest.class, this::postIidGidLinkHandler)
+            .onMessage(PostIidNewGidLinkRequest.class, this::postIidNewGidLinkHandler)
+            .onMessage(PostUpdateNotificationRequest.class, this::postUpdateNotificationHandler)
+            .onMessage(PostSimpleSearchGoldenRecordsRequest.class, this::postSimpleSearchGoldenRecordsHandler)
+            .onMessage(PostCustomSearchGoldenRecordsRequest.class, this::postCustomSearchGoldenRecordsHandler)
+            .onMessage(PostSimpleSearchInteractionsRequest.class, this::postSimpleSearchInteractionsHandler)
+            .onMessage(PostCustomSearchInteractionsRequest.class, this::postCustomSearchInteractionsHandler)
+            .onMessage(PostFilterGidsRequest.class, this::postFilterGidsHandler)
+            .onMessage(PostFilterGidsWithInteractionCountRequest.class, this::postFilterGidsWithInteractionCountHandler)
+            .onMessage(PostUploadCsvFileRequest.class, this::postUploadCsvFileHandler)
+            .onMessage(SQLDashboardDataRequest.class, this::getSqlDashboardDataHandler)
+            .onMessage(GetConfigurationRequest.class, this::getConfigurationHandler)
+            .build();
    }
 
    private Behavior<Event> postSimpleSearchGoldenRecordsHandler(final PostSimpleSearchGoldenRecordsRequest request) {
@@ -252,13 +257,13 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
 
    private Behavior<Event> getNotificationsHandler(final GetNotificationsRequest request) {
       MatchesForReviewResult result = psqlNotifications.getMatchesForReview(request.limit(),
-                                                                            request.offset(),
-                                                                            request.startDate(),
-                                                                            request.endDate(),
-                                                                            request.states());
+            request.offset(),
+            request.startDate(),
+            request.endDate(),
+            request.states());
       request.replyTo.tell(new GetNotificationsResponse(result.getCount(),
-                                                        result.getSkippedRecords(),
-                                                        result.getNotifications()));
+            result.getSkippedRecords(),
+            result.getNotifications()));
       return Behaviors.same();
    }
 
@@ -313,8 +318,8 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
       } catch (Exception e) {
          LOGGER.error(e.getLocalizedMessage(), e);
          LOGGER.error("libMPI.findExpandedGoldenRecord failed for goldenId: {} with error: {}",
-                      request.goldenId,
-                      e.getMessage());
+               request.goldenId,
+               e.getMessage());
       }
 
       if (expandedGoldenRecord == null) {
@@ -334,8 +339,8 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
          goldenRecords = libMPI.findExpandedGoldenRecords(request.goldenIds);
       } catch (Exception exception) {
          LOGGER.error("libMPI.findExpandedGoldenRecords failed for goldenIds: {} with error: {}",
-                      request.goldenIds,
-                      exception.getMessage());
+               request.goldenIds,
+               exception.getMessage());
       }
 
       if (goldenRecords == null) {
@@ -355,8 +360,8 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
          expandedInteractions = libMPI.findExpandedInteractions(request.patientIds);
       } catch (Exception exception) {
          LOGGER.error("libMPI.findExpandedPatientRecords failed for patientIds: {} with error: {}",
-                      request.patientIds,
-                      exception.getMessage());
+               request.patientIds,
+               exception.getMessage());
       }
 
       if (expandedInteractions == null) {
@@ -376,7 +381,7 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
          interaction = libMPI.findInteraction(request.iid);
       } catch (Exception exception) {
          LOGGER.error("libMPI.findPatientRecord failed for patientId: {} with error: {}", request.iid,
-                      exception.getMessage());
+               exception.getMessage());
       }
 
       if (interaction == null) {
@@ -395,7 +400,7 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
       final var updatedFields = new ArrayList<GoldenRecordUpdateRequestPayload.Field>();
       for (final GoldenRecordUpdateRequestPayload.Field field : fields) {
          final var result = libMPI.updateGoldenRecordField(null, goldenId, field.name(), field.oldValue(),
-                                                           field.newValue());
+               field.newValue());
          if (result) {
             updatedFields.add(field);
          } else {
@@ -408,7 +413,7 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
 
    private Behavior<Event> postIidGidLinkHandler(final PostIidGidLinkRequest request) {
       final var linkInfo = libMPI.updateLink(request.currentGoldenId, request.newGoldenId, request.patientId,
-                                             request.score);
+            request.score);
       request.replyTo.tell(new PostIidGidLinkResponse(linkInfo));
       return Behaviors.same();
    }
@@ -440,7 +445,7 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
    private Behavior<Event> postUpdateNotificationHandler(final PostUpdateNotificationRequest request) {
       try {
          psqlNotifications.updateNotificationState(request.notificationId, request.oldGoldenId,
-                                                   request.currentGoldenId);
+               request.currentGoldenId);
          libMPI.sendUpdatedNotificationEvent(request.notificationId, request.oldGoldenId, request.currentGoldenId);
       } catch (SQLException exception) {
          LOGGER.error(exception.getMessage());
@@ -470,20 +475,28 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
       final int openNotifications = psqlNotifications.getNotificationCount("OPEN");
       final int closedNotifications = psqlNotifications.getNotificationCount("CLOSED");
       request.replyTo.tell(new SQLDashboardDataResponse(new SQLDashboardData(new NotificationStats(openNotifications,
-                                                                                                   closedNotifications))));
+            closedNotifications))));
       return Behaviors.same();
    }
 
    private Behavior<Event> getConfigurationHandler(final GetConfigurationRequest request) {
       String currentPath = System.getProperty("user.dir");
-      String configJsonFilePath = currentPath + "/conf/config-reference.json";
+      String configMasterJsonFilePath = currentPath + "/conf/config-master.json";
+      String configReferenceJsonFilePath = currentPath + "/conf/config-reference.json";
+
+      Path configFilePath = Paths.get(configMasterJsonFilePath);
+      if (!Files.exists(configFilePath)) {
+         configFilePath = Paths.get(configReferenceJsonFilePath);
+      }
 
       try {
-         String configFileContent = new String(Files.readAllBytes(Paths.get(configJsonFilePath)));
-         request.replyTo.tell(new GetConfigurationResponse(configFileContent));
+         String configFileContent = Files.readString(configFilePath);
+         ObjectMapper mapper = new ObjectMapper();
+         Configuration configuration = mapper.readValue(configFileContent, Configuration.class);
+         request.replyTo.tell(new GetConfigurationResponse(configuration));
       } catch (Exception exception) {
          LOGGER.error("getConfigurationHandler failed: {} with error: {}",
-                      exception.getMessage());
+               exception.getMessage());
       }
 
       return Behaviors.same();
@@ -556,7 +569,7 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
    public record GetConfigurationRequest(ActorRef<GetConfigurationResponse> replyTo) implements Event {
    }
 
-   public record GetConfigurationResponse(String configuration) implements EventResponse {
+   public record GetConfigurationResponse(Configuration configuration) implements EventResponse {
    }
 
    public record FindExpandedSourceIdRequest(
